date issue resolved and added latest project summary route
